--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,12 @@ h2 {
     margin-bottom: 0;
     position: absolute;
     right: 0px;
-    top: 12px;
+    top: 10px;
     color: #fff;
 }
 section {
     background-color: #e3e3e3;
-    /*border: 1px solid black;*/
+    border: 1px solid black;
     position: relative;
     min-height: 200px;
     margin-right: 15px;
