--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ h1 {
 h2 {
     display: inline-block;
     border: 1px solid black;
+    border-right: 0;
     padding: 5px;
     font-size: 125%;
     width: 150px;
